Removed mobile filter icon from view, added to js.  Changed View filter label text, updated js for mobile filtering.

--- a/config/crescenttool_au/default/views.view.product_category.yml
+++ b/config/crescenttool_au/default/views.view.product_category.yml
@@ -393,7 +393,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: false
-          content: '<div class=''filter-icon''></div>'
+          content: ''
           tokenize: false
       footer: {  }
       display_extenders:
@@ -565,7 +565,7 @@ display:
           exposed: true
           expose:
             operator_id: field_product_classifications_target_id_op
-            label: 'Product Classifications'
+            label: Category
             description: ''
             use_operator: false
             operator: field_product_classifications_target_id_op
