VYRKCATG-200: Got the New Products filters styled for GW AU other than the hierarchy icon.

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -580,6 +580,11 @@ view--new-products:
       css/libraries/view/new-products.css: {}
   js:
     js/libraries/view/new-products.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench_au/library--jquery-roving-tabindex
 
 view--product-category-grid:
   version: 1.x
