VYRKCATG-200: Setup the New Products filters styles for CT AU.

--- a/config/crescenttool_au/default/views.view.new_products.yml
+++ b/config/crescenttool_au/default/views.view.new_products.yml
@@ -113,7 +113,7 @@ display:
               autosubmit: true
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
-              autosubmit_hide: true
+              autosubmit_hide: false
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
@@ -295,7 +295,7 @@ display:
           reduce_duplicates: false
           vid: product_classifications
           type: select
-          hierarchy: false
+          hierarchy: true
           limit: true
           error_message: false
       style:
