--- a/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
+++ b/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
@@ -630,6 +630,11 @@ view--new-products:
       css/libraries/view/new-products.css: {}
   js:
     js/libraries/view/new-products.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench_au/library--jquery-roving-tabindex
 
 view--product-brand-grid:
   version: 1.x
