added js dependencies, added accordion js, updated brands js form selector

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -553,6 +553,11 @@ view--media-pages:
       css/libraries/view/media-pages.css: {}
   js:
     js/libraries/view/media-pages.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench_au/library--jquery-roving-tabindex
 
 view--taxonomy-term:
   version: 1.x
