--- a/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
+++ b/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
@@ -597,6 +597,11 @@ view--media-pages:
       css/libraries/view/media-pages.css: {}
   js:
     js/libraries/view/media-pages.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - crescenttool_au/library--jquery-roving-tabindex
 
 view--taxonomy-term:
   version: 1.x
