--- a/config/gearwrench/default/editor.editor.full_html.yml
+++ b/config/gearwrench/default/editor.editor.full_html.yml
@@ -32,6 +32,9 @@ settings:
             - Subscript
             - '-'
             - RemoveFormat
+            - JustifyLeft
+            - JustifyCenter
+            - JustifyRight
         -
           name: Linking
           items:
@@ -59,13 +62,13 @@ settings:
             - ShowBlocks
             - Source
   plugins:
+    stylescombo:
+      styles: ''
     drupallink:
       linkit_enabled: true
       linkit_profile: default
     language:
       language_list: un
-    stylescombo:
-      styles: ''
 image_upload:
   status: true
   scheme: public
