--- a/config/gearwrench_au/default/editor.editor.full_html.yml
+++ b/config/gearwrench_au/default/editor.editor.full_html.yml
@@ -13,6 +13,7 @@ third_party_settings:
     scheme: public
     directory: inline-files
     extensions: txt
+    max_size: ''
 _core:
   default_config_hash: o28gj4WoTtT0od1KkSGLl0Y_PdVi_fezPICNqMz-0uM
 format: full_html
@@ -31,6 +32,9 @@ settings:
             - Subscript
             - '-'
             - RemoveFormat
+            - JustifyLeft
+            - JustifyCenter
+            - JustifyRight
         -
           name: Linking
           items:
@@ -58,13 +62,13 @@ settings:
             - ShowBlocks
             - Source
   plugins:
+    stylescombo:
+      styles: ''
     drupallink:
       linkit_enabled: true
       linkit_profile: default
     language:
       language_list: un
-    stylescombo:
-      styles: ''
 image_upload:
   status: true
   scheme: public
