--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -228,6 +228,7 @@ node--full--product:
   css:
     component:
       css/libraries/node/full--product.css: { }
+      css/libraries/node/full--product-print.css: { media: print }
   js:
     js/libraries/node/full--product.js: {}
   dependencies:
