--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
         "drupal/field_group_settings": "^3.0",
         "drupal/field_label": "^1.0",
         "drupal/field_states_ui": "^2.0",
-        "drupal/file_mdm": "2.3",
+        "drupal/file_mdm": "^2.4",
         "drupal/focal_point": "^1.5",
         "drupal/google_tag": "^1.3",
         "drupal/image_effects": "^3.1",
