--- a/config/crescenttool/default/system.site.yml
+++ b/config/crescenttool/default/system.site.yml
@@ -6,9 +6,9 @@ name: 'Crescent Tools'
 mail: no-reply@crescenttool.com
 slogan: ''
 page:
-  403: ''
-  404: ''
-  front: /home
+  403: /node/12191
+  404: /node/12186
+  front: /node/6
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
