feature/VYRKCATG-281: Added Mailchimp for GW AU. Next up is Crescent. Also updated Drupal core and modules.

--- a/config/gearwrench_au/default/pathauto.pattern.product.yml
+++ b/config/gearwrench_au/default/pathauto.pattern.product.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '/products/[node:product_classifications_parent]/[node:product_classifications_child_first]/[node:product_classifications_child_second]/[node:title]-[node:field_long_description]'
 selection_criteria:
   713babda-79a1-483f-9b4d-b267e018d90b:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 713babda-79a1-483f-9b4d-b267e018d90b
     context_mapping:
