--- a/composer.json
+++ b/composer.json
@@ -138,6 +138,7 @@
         "drupal/viewsreference": "^2.0@alpha",
         "drupal/viewsreference_filter": "^1.0.3",
         "drupal/webform": "^6.0",
+        "drupal/webform_mailchimp": "^5.9",
         "drush/drush": "^10.3",
         "facebook/graph-sdk": "^5.7",
         "furf/jquery-ui-touch-punch": "^1.0",
