--- a/config/gearwrench_au/default/pathauto.pattern.media_page.yml
+++ b/config/gearwrench_au/default/pathauto.pattern.media_page.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '/media-center/[node:field_category:entity:name]/[node:title]'
 selection_criteria:
   d7352d28-41a7-4cc4-aeb1-e94ee5af6161:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: d7352d28-41a7-4cc4-aeb1-e94ee5af6161
     context_mapping:
