--- a/config/gearwrench_au/default/pathauto.pattern.product_category.yml
+++ b/config/gearwrench_au/default/pathauto.pattern.product_category.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'all-tools/[node:product_classifications_parent]/[node:product_classifications_child_first]/[node:product_classifications_child_second]'
 selection_criteria:
   f95abc2a-4cfc-49d0-845e-5da8d4e401af:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: f95abc2a-4cfc-49d0-845e-5da8d4e401af
     context_mapping:
