--- a/config/gearwrench_au/local/core.extension.yml
+++ b/config/gearwrench_au/local/core.extension.yml
@@ -80,6 +80,7 @@ module:
   link_class: 0
   linkit: 0
   login_emailusername: 0
+  mailchimp: 0
   mailsystem: 0
   media: 0
   media_library: 0
@@ -90,6 +91,7 @@ module:
   menu_link_content: 0
   menu_ui: 0
   metatag: 0
+  metatag_async_widget: 0
   metatag_facebook: 0
   metatag_favicons: 0
   metatag_hreflang: 0
@@ -156,6 +158,7 @@ module:
   viewsreference: 0
   webform: 0
   webform_attachment: 0
+  webform_mailchimp: 0
   webform_submission_export_import: 0
   webform_ui: 0
   limited_field_widgets: 1
