feature/VYRKCATG-281: Added Mailchimp settings to Crescent AU.

--- a/config/crescenttool_au/local/stage_file_proxy.settings.yml
+++ b/config/crescenttool_au/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
-origin: 'https://username:password@stg-www.crescenttool.com.au'
-origin_dir: sites/crescenttool/files
+origin: 'https://prod-www.crescenttool.com.au'
+origin_dir: sites/crescenttool_au/files
 use_imagecache_root: true
 verify: false
