--- a/config/crescenttool_au/remote_stage/stage_file_proxy.settings.yml
+++ b/config/crescenttool_au/remote_stage/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
 origin: 'https://prod-www.crescenttool.com.au'
-origin_dir: ''
+origin_dir: 'sites/crescenttool_au/files'
 use_imagecache_root: true
-verify: true
+verify: false
