--- a/config/gearwrench_au/default/core.extension.yml
+++ b/config/gearwrench_au/default/core.extension.yml
@@ -79,6 +79,7 @@ module:
   link_class: 0
   linkit: 0
   login_emailusername: 0
+  mailchimp: 0
   mailsystem: 0
   media: 0
   media_library: 0
@@ -155,6 +156,7 @@ module:
   viewsreference: 0
   webform: 0
   webform_attachment: 0
+  webform_mailchimp: 0
   webform_submission_export_import: 0
   webform_ui: 0
   limited_field_widgets: 1
