feature/VYRKCATG-394: Updated the new products mobile filter to show when there are no results.

--- a/config/crescenttool_au/default/views.view.new_products.yml
+++ b/config/crescenttool_au/default/views.view.new_products.yml
@@ -323,7 +323,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: result
-          empty: false
+          empty: true
           content: 'Showing @current_record_count of @total results'
         area_text_custom:
           id: area_text_custom
@@ -333,7 +333,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: text_custom
-          empty: false
+          empty: true
           content: '<div class="controls"><div class=''filter-icon''></div></div>'
           tokenize: false
       footer: {  }
