--- a/config/gearwrench_au/default/views.view.new_products.yml
+++ b/config/gearwrench_au/default/views.view.new_products.yml
@@ -333,7 +333,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: text_custom
-          empty: false
+          empty: true
           content: '<div class="controls"><div class=''filter-icon''></div></div>'
           tokenize: false
       footer: {  }
