--- a/config/gearwrench_au/default/webform.webform.gear_up_with_gearwrench.yml
+++ b/config/gearwrench_au/default/webform.webform.gear_up_with_gearwrench.yml
@@ -259,7 +259,7 @@ handlers:
   email:
     id: email
     handler_id: email
-    label: 'Email for "Become a Distributor" - US'
+    label: 'Email for "Become a Distributor" '
     notes: ''
     status: true
     conditions:
@@ -272,7 +272,7 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: csrwest@apextoolgroup.com
+      to_mail: salesau@apextoolgroup.com
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
@@ -298,572 +298,22 @@ handlers:
       theme_name: ''
       parameters: {  }
       debug: false
-  email_for_become_a_distributor_guam:
+  gear_up:
     id: email
-    handler_id: email_for_become_a_distributor_guam
-    label: 'Email for "Become a Distributor" - Guam'
+    handler_id: gear_up
+    label: 'Gear Up'
     notes: ''
     status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: Guam
-        ':input[name="select_type"]':
-          value: 'Become a Distributor'
-    weight: 1
+    conditions: {  }
+    weight: 0
     settings:
       states:
         - completed
-      to_mail: peter.reynoldson@apextoolgroup.com
+      to_mail: 'Rebecca.Vella@apextoolgroup.com, Sigfried.fernandez@apextoolgroup.com'
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_become_a_distributor_us_virgin_islands:
-    id: email
-    handler_id: email_for_become_a_distributor_us_virgin_islands
-    label: 'Email for "Become a Distributor" - US Virgin Islands'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'U.S. Virgin Islands'
-        ':input[name="select_type"]':
-          value: 'Become a Distributor'
-    weight: 3
-    settings:
-      states:
-        - completed
-      to_mail: esteban.quijano@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_become_a_distributor_puerto_rico:
-    id: email
-    handler_id: email_for_become_a_distributor_puerto_rico
-    label: 'Email for "Become a Distributor" - Puerto Rico'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'Puerto Rico'
-        ':input[name="select_type"]':
-          value: 'Become a Distributor'
-    weight: 3
-    settings:
-      states:
-        - completed
-      to_mail: amilcar.toolpr@gmail.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_feedback_us:
-    id: email
-    handler_id: email_for_feedback_us
-    label: 'Email for "Feedback" - US'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'United States'
-        ':input[name="select_type"]':
-          value: 'Product Feedback'
-    weight: 4
-    settings:
-      states:
-        - completed
-      to_mail: csrwest@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_feedback_guam:
-    id: email
-    handler_id: email_for_feedback_guam
-    label: 'Email for "Feedback" - Guam'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: Guam
-        ':input[name="select_type"]':
-          value: 'Product Feedback'
-    weight: 5
-    settings:
-      states:
-        - completed
-      to_mail: peter.reynoldson@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_feedback_puerto_rico:
-    id: email
-    handler_id: email_for_feedback_puerto_rico
-    label: 'Email for "Feedback" - Puerto Rico'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'Puerto Rico'
-        ':input[name="select_type"]':
-          value: 'Product Feedback'
-    weight: 6
-    settings:
-      states:
-        - completed
-      to_mail: amilcar.toolpr@gmail.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_feedback_us_virgin_islands:
-    id: email
-    handler_id: email_for_feedback_us_virgin_islands
-    label: 'Email for "Feedback" - US Virgin Islands'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'U.S. Virgin Islands'
-        ':input[name="select_type"]':
-          value: 'Product Feedback'
-    weight: 7
-    settings:
-      states:
-        - completed
-      to_mail: esteban.quijano@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_sales_us:
-    id: email
-    handler_id: email_for_sales_us
-    label: 'Email for "Sales" - US'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'United States'
-        ':input[name="select_type"]':
-          value: 'Sales Quote'
-    weight: 8
-    settings:
-      states:
-        - completed
-      to_mail: csrwest@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_sales_guam:
-    id: email
-    handler_id: email_for_sales_guam
-    label: 'Email for "Sales" - Guam'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: Guam
-        ':input[name="select_type"]':
-          value: 'Sales Quote'
-    weight: 9
-    settings:
-      states:
-        - completed
-      to_mail: peter.reynoldson@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_sales_puerto_rico:
-    id: email
-    handler_id: email_for_sales_puerto_rico
-    label: 'Email for "Sales" - Puerto Rico'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'Puerto Rico'
-        ':input[name="select_type"]':
-          value: 'Sales Quote'
-    weight: 10
-    settings:
-      states:
-        - completed
-      to_mail: amilcar.toolpr@gmail.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_sales_us_virgin_islands:
-    id: email
-    handler_id: email_for_sales_us_virgin_islands
-    label: 'Email for "Sales" - US Virgin Islands'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="address[country]"]':
-          value: 'U.S. Virgin Islands'
-        ':input[name="select_type"]':
-          value: 'Sales Quote'
-    weight: 11
-    settings:
-      states:
-        - completed
-      to_mail: esteban.quijano@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_technical_all:
-    id: email
-    handler_id: email_for_technical_all
-    label: 'Email for "Technical" - All'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="select_type"]':
-          value: 'Product Technical Question'
-    weight: 12
-    settings:
-      states:
-        - completed
-      to_mail: TechnicalQuestions@ApexToolGroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_support_all:
-    id: email
-    handler_id: email_for_support_all
-    label: 'Email for "Support" - All'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        -
-          ':input[name="select_type"]':
-            value: 'Tools Truck'
-        - or
-        -
-          ':input[name="select_type"]':
-            value: 'Add/Adjust Your Location Information'
-    weight: 13
-    settings:
-      states:
-        - completed
-      to_mail: Streetteam.help@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
-  email_for_warranty_all:
-    id: email
-    handler_id: email_for_warranty_all
-    label: 'Email for "Warranty" - All'
-    notes: ''
-    status: true
-    conditions:
-      enabled:
-        ':input[name="select_type"]':
-          value: 'Warranty/Replacement Parts/Repair'
-    weight: 14
-    settings:
-      states:
-        - completed
-      to_mail: customercare@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
+      cc_mail: Frank.Pudarich@apextoolgroup.com
       cc_options: {  }
       from_mail: _default
       from_options: {  }
