Upating the prod config for CT AU.

--- a/config/crescenttool_au/remote_prod/acquia_connector.settings.yml
+++ b/config/crescenttool_au/remote_prod/acquia_connector.settings.yml
@@ -34,6 +34,8 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
+  site_environment: prod
+  site_uuid: d45f58a4-140d-4cb6-b302-901ae25c8933
   env_detection_enabled: true
 mapping:
   acquia_spi_send_node_user:
