--- a/config/crescenttool_au/default/webform.webform.email_sign_up.yml
+++ b/config/crescenttool_au/default/webform.webform.email_sign_up.yml
@@ -57,10 +57,10 @@ elements: |-
 css: ''
 javascript: ''
 settings:
-  ajax: false
+  ajax: true
   ajax_scroll_top: form
-  ajax_progress_type: ''
-  ajax_effect: ''
+  ajax_progress_type: throbber
+  ajax_effect: none
   ajax_speed: null
   page: true
   page_submit_path: ''
@@ -156,12 +156,12 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: url
+  confirmation_type: inline
   confirmation_url: /form-submission-thank-you
   confirmation_title: ''
-  confirmation_message: ''
+  confirmation_message: 'Thank you for subscribing!'
   confirmation_attributes: {  }
-  confirmation_back: true
+  confirmation_back: false
   confirmation_back_label: ''
   confirmation_back_attributes: {  }
   confirmation_exclude_query: true
@@ -248,7 +248,7 @@ handlers:
       list: 515e8cf8d8
       email: email_address
       double_optin: false
-      mergevars: "FNAME: [webform_submission:values:first_name]\r\nLNAME: [webform_submission:values:last_name]"
+      mergevars: "FNAME: '[webform_submission:values:first_name]'\r\nLNAME: '[webform_submission:values:last_name]'"
       interest_groups: {  }
       control: privacy_policy
 variants: {  }
