Updating the prod config for GW AU.

--- a/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
+++ b/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
@@ -1,6 +1,6 @@
 uuid: 47f9abf6-2e21-4320-9dfd-dce029a63a29
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - block_class
@@ -12,8 +12,8 @@ third_party_settings:
     classes: block-pricespider-generic-widget-block
 id: wherebuypricespiderwidget
 theme: gearwrench_au
-region: header
-weight: -4
+region: content
+weight: -2
 provider: null
 plugin: 'block_content:9610659b-4dba-4225-b330-4dda5b6d95cf'
 settings:
