--- a/config/gearwrench_au/default/webform.webform.email_sign_up.yml
+++ b/config/gearwrench_au/default/webform.webform.email_sign_up.yml
@@ -1,7 +1,9 @@
 uuid: 43efb39b-acc1-4c2d-9a2a-9aa010cc48c4
 langcode: en
 status: open
-dependencies: {  }
+dependencies:
+  module:
+    - webform_mailchimp
 weight: 0
 open: null
 close: null
@@ -37,7 +39,7 @@ elements: |-
       '#placeholder': 'Email Address'
       '#required': true
       '#required_error': Required
-      '#pattern': '(?:[a-z0-9!#$%&''*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&''*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])'
+      '#pattern': '(?:[a-zA-Z0-9!#$%&''*+/=?^_`{|}~-]+(?:\.[a-zA-Z0-9!#$%&''*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-zA-Z0-9-]*[a-zA-Z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])'
       '#pattern_error': 'Invalid email entered.'
   flexbox_03:
     '#type': webform_flexbox
@@ -55,10 +57,10 @@ elements: |-
 css: ''
 javascript: ''
 settings:
-  ajax: false
+  ajax: true
   ajax_scroll_top: form
-  ajax_progress_type: ''
-  ajax_effect: ''
+  ajax_progress_type: throbber
+  ajax_effect: none
   ajax_speed: null
   page: true
   page_submit_path: ''
@@ -154,12 +156,12 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: url
+  confirmation_type: inline
   confirmation_url: /form-submission-thank-you
   confirmation_title: ''
-  confirmation_message: ''
+  confirmation_message: 'Thank you for subscribing!'
   confirmation_attributes: {  }
-  confirmation_back: true
+  confirmation_back: false
   confirmation_back_label: ''
   confirmation_back_attributes: {  }
   confirmation_exclude_query: true
@@ -234,41 +236,19 @@ access:
     users: {  }
     permissions: {  }
 handlers:
-  email:
-    id: email
-    handler_id: email
-    label: Email
+  mailchimp:
+    id: mailchimp
+    handler_id: mailchimp
+    label: MailChimp
     notes: ''
     status: true
     conditions: {  }
-    weight: 0
+    weight: -50
     settings:
-      states:
-        - completed
-      to_mail: salesau@apextoolgroup.com
-      to_options: {  }
-      bcc_mail: ''
-      bcc_options: {  }
-      cc_mail: ''
-      cc_options: {  }
-      from_mail: _default
-      from_options: {  }
-      from_name: _default
-      reply_to: ''
-      return_path: ''
-      sender_mail: ''
-      sender_name: ''
-      subject: _default
-      body: _default
-      excluded_elements: {  }
-      ignore_access: false
-      exclude_empty: true
-      exclude_empty_checkbox: false
-      exclude_attachments: false
-      html: true
-      attachments: false
-      twig: false
-      theme_name: ''
-      parameters: {  }
-      debug: false
+      list: 0e57960b1e
+      email: email_address
+      double_optin: false
+      mergevars: "FNAME: '[webform_submission:values:first_name]'\r\nLNAME: '[webform_submission:values:last_name]'"
+      interest_groups: {  }
+      control: privacy_policy
 variants: {  }
