--- a/config/gearwrench_au/default/mailsystem.settings.yml
+++ b/config/gearwrench_au/default/mailsystem.settings.yml
@@ -1,6 +1,11 @@
 _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
-theme: current
+theme: gearwrench_au
 defaults:
-  sender: php_mail
-  formatter: php_mail
+  sender: swiftmailer
+  formatter: swiftmailer
+modules:
+  swiftmailer:
+    none:
+      sender: swiftmailer
+      formatter: swiftmailer
