mailfix_au: Fixed CT AU. Also updated the password in config for the NA sites.

--- a/config/crescenttool/default/swiftmailer.transport.yml
+++ b/config/crescenttool/default/swiftmailer.transport.yml
@@ -10,5 +10,5 @@ smtp_credential_provider: swiftmailer
 smtp_credentials:
   swiftmailer:
     username: no-reply@apextoolgroup.com
-    password: 'd=Ad1+c3=c+G:*7sO8Y'''
+    password: U%v2Bu3G!s9Kp+rVJcZB
 spool_directory: ''
