--- a/config/gearwrench_au/default/system.site.yml
+++ b/config/gearwrench_au/default/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: 34cd75f0-7f83-4def-acff-137e76aa0d4e
 name: 'Gearwrench Australia'
-mail: no-reply@gearwrench.com
+mail: no-reply@gearwrench.com.au
 slogan: ''
 page:
   403: ''
