sata_sites: Setup languages for Brazil.

--- a/config/sata_brazil/default/language.negotiation.yml
+++ b/config/sata_brazil/default/language.negotiation.yml
@@ -4,8 +4,9 @@ session:
 url:
   source: path_prefix
   prefixes:
-    pt-br: ''
+    pt-br: pt-br
     '': null
+    en: ''
   domains:
     pt-br: ''
-selected_langcode: site_default
+selected_langcode: pt-br
