sata_sites: Changed some language settings.

--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
@@ -8,7 +8,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_brazil
-label: 'Gearwrench AU Product Classifications - Level Three'
+label: 'SATA Brazil Product Classifications - Level Three'
 source:
   plugin: url
   data_fetcher_plugin: http
