--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_category_pages_level_two.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_category_pages_level_two.yml
@@ -1,13 +1,13 @@
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_au_product_category_pages_level_two
+id: sata_brazil_product_category_pages_level_two
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench_au
-label: 'Gearwrench AU Product Listing Pages - Level Two'
+migration_group: sata_brazil
+label: 'SATA Brazil Product Listing Pages - Level Two'
 source:
   constants:
     bool_0: 0
