--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration_group.sata_brazil.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration_group.sata_brazil.yml
@@ -1,9 +1,9 @@
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_au
-label: 'Gearwrench Australia Migrations'
-description: 'Gearwrench Australia Migrations'
+id: sata_brazil
+label: 'SATA Brazil Migrations'
+description: 'SATA Brazil Migrations'
 source_type: XML
 module: null
 shared_configuration: null
