--- a/config/sata_brazil/default/language.content_settings.node.media_page.yml
+++ b/config/sata_brazil/default/language.content_settings.node.media_page.yml
@@ -7,5 +7,5 @@ dependencies:
 id: node.media_page
 target_entity_type_id: node
 target_bundle: media_page
-default_langcode: site_default
-language_alterable: false
+default_langcode: pt-br
+language_alterable: true
