--- a/config/sata_brazil/default/language.content_settings.node.product_category.yml
+++ b/config/sata_brazil/default/language.content_settings.node.product_category.yml
@@ -7,5 +7,5 @@ dependencies:
 id: node.product_category
 target_entity_type_id: node
 target_bundle: product_category
-default_langcode: site_default
-language_alterable: false
+default_langcode: pt-br
+language_alterable: true
