--- a/config/sata_brazil/default/language.content_settings.node.styleguide.yml
+++ b/config/sata_brazil/default/language.content_settings.node.styleguide.yml
@@ -7,5 +7,5 @@ dependencies:
 id: node.styleguide
 target_entity_type_id: node
 target_bundle: styleguide
-default_langcode: site_default
-language_alterable: false
+default_langcode: pt-br
+language_alterable: true
