--- a/config/sata_brazil/default/language.content_settings.redirect.redirect.yml
+++ b/config/sata_brazil/default/language.content_settings.redirect.redirect.yml
@@ -7,5 +7,5 @@ dependencies:
 id: redirect.redirect
 target_entity_type_id: redirect
 target_bundle: redirect
-default_langcode: und
+default_langcode: pt-br
 language_alterable: true
