--- a/config/sata_brazil/default/language.content_settings.taxonomy_term.media_page_categories.yml
+++ b/config/sata_brazil/default/language.content_settings.taxonomy_term.media_page_categories.yml
@@ -7,5 +7,5 @@ dependencies:
 id: taxonomy_term.media_page_categories
 target_entity_type_id: taxonomy_term
 target_bundle: media_page_categories
-default_langcode: site_default
-language_alterable: false
+default_langcode: pt-br
+language_alterable: true
