--- a/config/sata_brazil/default/language.content_settings.taxonomy_term.product_industry.yml
+++ b/config/sata_brazil/default/language.content_settings.taxonomy_term.product_industry.yml
@@ -7,5 +7,5 @@ dependencies:
 id: taxonomy_term.product_industry
 target_entity_type_id: taxonomy_term
 target_bundle: product_industry
-default_langcode: site_default
-language_alterable: false
+default_langcode: pt-br
+language_alterable: true
