--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_category_pages_level_two.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_category_pages_level_two.yml
@@ -8,7 +8,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_brazil
-label: 'Gearwrench AU Product Listing Pages - Level Two'
+label: 'SATA Brazil Product Listing Pages - Level Two'
 source:
   constants:
     bool_0: 0
