--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
@@ -8,7 +8,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_brazil
-label: 'Gearwrench AU Product Specifications'
+label: 'SATA Brazil Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
