--- a/config/sata_brazil/default/migrate_plus.migration.sata_product_classifications_level_two.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_product_classifications_level_two.yml
@@ -8,7 +8,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata
-label: 'Gearwrench AU Product Classifications - Level Two'
+label: 'SATA Brazil Product Classifications - Level Two'
 source:
   plugin: url
   data_fetcher_plugin: http
