--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_one.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_one.yml
@@ -1,13 +1,13 @@
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_au_product_classifications_level_one
+id: sata_brazil_product_classifications_level_one
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench_au
-label: 'Gearwrench AU Product Classifications - Level One'
+migration_group: sata_brazil
+label: 'SATA Brazil Product Classifications - Level One'
 source:
   plugin: url
   data_fetcher_plugin: http
