--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_specifications.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_specifications.yml
@@ -1,13 +1,13 @@
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_au_product_specifications
+id: sata_brazil_product_specifications
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench_au
-label: 'Gearwrench AU Product Specifications'
+migration_group: sata_brazil
+label: 'SATA Brazil Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
