--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_products.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_products.yml
@@ -1,12 +1,12 @@
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_au_products
+id: sata_brazil_products
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench_au
+migration_group: sata_brazil
 label: Products
 source:
   constants:
