--- a/config/sata_brazil/default/block.block.footer_navigation_block.yml
+++ b/config/sata_brazil/default/block.block.footer_navigation_block.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - gearwrench_core
+    - sata_core
   theme:
     - sata
 id: footer_navigation_block
@@ -16,5 +16,5 @@ settings:
   id: footer_navigation_block
   label: 'Footer navigation block'
   label_display: '0'
-  provider: gearwrench_core
+  provider: sata_core
 visibility: {  }
