--- a/config/sata_brazil/default/block.block.productbuynowsticky.yml
+++ b/config/sata_brazil/default/block.block.productbuynowsticky.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - gearwrench_core
+    - sata_core
     - node
   theme:
     - sata
@@ -17,7 +17,7 @@ settings:
   id: product_buy_now_sticky
   label: 'Product: Buy Now Sticky'
   label_display: '0'
-  provider: gearwrench_core
+  provider: sata_core
 visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
