--- a/config/sata_brazil/default/config_export_ignore.settings.yml
+++ b/config/sata_brazil/default/config_export_ignore.settings.yml
@@ -1,3 +1,3 @@
 configuration_names:
-  0: 'gearwrench_core.settings:warranty_highest_exported_sid'
+  0: 'sata_core.settings:warranty_highest_exported_sid'
   2: 'webform.webform.*'
