--- a/config/sata_brazil/default/metatag.metatag_defaults.node__product.yml
+++ b/config/sata_brazil/default/metatag.metatag_defaults.node__product.yml
@@ -5,13 +5,13 @@ dependencies: {  }
 id: node__product
 label: 'Content: Product'
 tags:
-  title: '[node:field_long_description] - Gearwrench'
+  title: '[node:field_long_description] - SATA'
   description: 'Count on GEARWRENCH to get the job done. Get the [node:field_long_description] here.'
   og_description: 'Count on GEARWRENCH to get the job done. Get the [node:title] [node:field_long_description] here.'
-  og_title: '[node:title] [node:field_long_description] - Gearwrench'
+  og_title: '[node:title] [node:field_long_description] - SATA'
   twitter_cards_description: 'Count on GEARWRENCH to get the job done. Get the [node:title] [node:field_long_description] here.'
-  twitter_cards_title: '[node:title] [node:field_long_description] - Gearwrench'
-  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:10:"Gearwrench";}'
+  twitter_cards_title: '[node:title] [node:field_long_description] - SATA'
+  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:10:"SATA";}'
   schema_product_image: 'a:3:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:29:"[node:field_media:entity:url]";}'
   schema_product_url: '[node:url]'
   schema_product_type: Product
