--- a/config/sata_brazil/default/metatag.metatag_defaults.node__product_category.yml
+++ b/config/sata_brazil/default/metatag.metatag_defaults.node__product_category.yml
@@ -6,8 +6,8 @@ id: node__product_category
 label: 'Content: Product Category'
 tags:
   description: 'Shop GEARWRENCH [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  title: 'Shop [node:product_classifications_full_string] from Gearwrench'
+  title: 'Shop [node:product_classifications_full_string] from SATA'
   og_description: 'Shop GEARWRENCH [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  og_title: 'Shop [node:product_classifications_full_string] from Gearwrench'
+  og_title: 'Shop [node:product_classifications_full_string] from SATA'
   twitter_cards_description: 'Shop GEARWRENCH [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  twitter_cards_title: 'Shop [node:product_classifications_full_string] from Gearwrench'
+  twitter_cards_title: 'Shop [node:product_classifications_full_string] from SATA'
