--- a/config/sata_brazil/default/views.view.social_feed.yml
+++ b/config/sata_brazil/default/views.view.social_feed.yml
@@ -169,7 +169,7 @@ display:
           plugin_id: text
           empty: false
           content:
-            value: '<h4>The Gearwrench World</h4>'
+            value: '<h4>The SATA World</h4>'
             format: full_html
           tokenize: false
       footer: {  }
