--- a/config/sata_brazil/default/webform.webform.contact_us.yml
+++ b/config/sata_brazil/default/webform.webform.contact_us.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: contact_us
 title: 'Contact Us'
-description: 'Contact form for Gearwrench.'
+description: 'Contact form for SATA.'
 category: ''
 elements: |-
   select_type:
