--- a/config/sata_brazil/default/webform.webform.warranty_replacement_form.yml
+++ b/config/sata_brazil/default/webform.webform.warranty_replacement_form.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: warranty_replacement_form
 title: 'Warranty/Replacement Form'
-description: 'Warranty/Replacement Form for Gearwrench.'
+description: 'Warranty/Replacement Form for SATA.'
 category: ''
 elements: |-
   warranty_container:
