--- a/config/sata_brazil/default/block.block.header_search_block.yml
+++ b/config/sata_brazil/default/block.block.header_search_block.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   module:
     - block_class
-    - gearwrench_core
+    - sata_core
   theme:
     - sata
 third_party_settings:
@@ -20,5 +20,5 @@ settings:
   id: header_search
   label: 'Header Search Block'
   label_display: '0'
-  provider: gearwrench_core
+  provider: sata_core
 visibility: {  }
