--- a/config/sata_brazil/default/views.view.product_category_grid.yml
+++ b/config/sata_brazil/default/views.view.product_category_grid.yml
@@ -243,7 +243,7 @@ display:
     display_plugin: embed
     position: 1
     display_options:
-      display_description: 'See gearwrench_core for programmatic filter settings for this display mode.'
+      display_description: 'See sata_core for programmatic filter settings for this display mode.'
       display_extenders: {  }
     cache_metadata:
       max-age: -1
