sata_colombia: Renamed "Brazil" to "Colombia" in strings.

--- a/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_category_pages_level_two.yml
+++ b/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_category_pages_level_two.yml
@@ -7,7 +7,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_colombia
-label: 'SATA Brazil Product Listing Pages - Level Two'
+label: 'SATA Colombia Product Listing Pages - Level Two'
 source:
   constants:
     bool_0: 0
