--- a/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_specifications.yml
+++ b/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_specifications.yml
@@ -7,7 +7,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_colombia
-label: 'SATA Brazil Product Specifications'
+label: 'SATA Colombia Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
