--- a/config/sata_colombia/default/migrate_plus.migration_group.sata_colombia.yml
+++ b/config/sata_colombia/default/migrate_plus.migration_group.sata_colombia.yml
@@ -2,8 +2,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: sata_colombia
-label: 'SATA Brazil Migrations'
-description: 'SATA Brazil Migrations'
+label: 'SATA Colombia Migrations'
+description: 'SATA Colombia Migrations'
 source_type: XML
 module: null
 shared_configuration: null
