--- a/config/sata_colombia/default/views.view.search.yml
+++ b/config/sata_colombia/default/views.view.search.yml
@@ -349,7 +349,7 @@ display:
               site_administrator: '0'
               content_editor: '0'
             expose_fields: false
-            placeholder: 'Search SATA Brazil'
+            placeholder: 'Search SATA Colombia'
             searched_fields_id: search_api_fulltext_searched_fields
           is_grouped: false
           group_info:
