--- a/config/sata_colombia/default/views.view.social_feed.yml
+++ b/config/sata_colombia/default/views.view.social_feed.yml
@@ -168,7 +168,7 @@ display:
           plugin_id: text
           empty: false
           content:
-            value: '<h4>The SATA Brazil World</h4>'
+            value: '<h4>The SATA Colombia World</h4>'
             format: full_html
           tokenize: false
       footer: {  }
