--- a/config/sata_colombia/default/webform.webform.contact_us.yml
+++ b/config/sata_colombia/default/webform.webform.contact_us.yml
@@ -9,7 +9,7 @@ template: false
 archive: false
 id: contact_us
 title: 'Contact Us'
-description: 'Contact form for SATA Brazil.'
+description: 'Contact form for SATA Colombia.'
 category: ''
 elements: |-
   select_type:
