--- a/config/sata_colombia/default/webform.webform.gear_up_with_sata_colombia.yml
+++ b/config/sata_colombia/default/webform.webform.gear_up_with_sata_colombia.yml
@@ -8,7 +8,7 @@ uid: 31
 template: false
 archive: false
 id: gear_up_with_sata_colombia
-title: 'Gear Up with SATA Brazil'
+title: 'Gear Up with SATA Colombia'
 description: 'Apprentice Redemption form'
 category: ''
 elements: |-
