--- a/config/sata_colombia/default/metatag.metatag_defaults.node__product.yml
+++ b/config/sata_colombia/default/metatag.metatag_defaults.node__product.yml
@@ -4,13 +4,13 @@ dependencies: {  }
 id: node__product
 label: 'Content: Product'
 tags:
-  title: '[node:field_long_description] - SATA Brazil'
-  description: 'Count on SATA Brazil to get the job done. Get the [node:field_long_description] here.'
-  og_description: 'Count on SATA Brazil to get the job done. Get the [node:title] [node:field_long_description] here.'
-  og_title: '[node:title] [node:field_long_description] - SATA Brazil'
-  twitter_cards_description: 'Count on SATA Brazil to get the job done. Get the [node:title] [node:field_long_description] here.'
-  twitter_cards_title: '[node:title] [node:field_long_description] - SATA Brazil'
-  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:10:"SATA Brazil";}'
+  title: '[node:field_long_description] - SATA Colombia'
+  description: 'Count on SATA Colombia to get the job done. Get the [node:field_long_description] here.'
+  og_description: 'Count on SATA Colombia to get the job done. Get the [node:title] [node:field_long_description] here.'
+  og_title: '[node:title] [node:field_long_description] - SATA Colombia'
+  twitter_cards_description: 'Count on SATA Colombia to get the job done. Get the [node:title] [node:field_long_description] here.'
+  twitter_cards_title: '[node:title] [node:field_long_description] - SATA Colombia'
+  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:10:"SATA Colombia";}'
   schema_product_image: 'a:3:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:29:"[node:field_media:entity:url]";}'
   schema_product_url: '[node:url]'
   schema_product_type: Product
