--- a/config/sata_colombia/default/metatag.metatag_defaults.node__product_category.yml
+++ b/config/sata_colombia/default/metatag.metatag_defaults.node__product_category.yml
@@ -4,9 +4,9 @@ dependencies: {  }
 id: node__product_category
 label: 'Content: Product Category'
 tags:
-  description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
-  og_description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  og_title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
-  twitter_cards_description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  twitter_cards_title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
+  description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
+  title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
+  og_description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
+  og_title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
+  twitter_cards_description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
+  twitter_cards_title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
