--- a/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_category_pages_level_three.yml
+++ b/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_category_pages_level_three.yml
@@ -7,7 +7,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_colombia
-label: 'SATA Brazil Product Listing Pages - Level Three'
+label: 'SATA Colombia Product Listing Pages - Level Three'
 source:
   constants:
     bool_0: 0
