--- a/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_classifications_level_one.yml
+++ b/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_classifications_level_one.yml
@@ -7,7 +7,7 @@ field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: sata_colombia
-label: 'SATA Brazil Product Classifications - Level One'
+label: 'SATA Colombia Product Classifications - Level One'
 source:
   plugin: url
   data_fetcher_plugin: http
