sata_colombia: Fixing config imports.

--- a/config/sata_brazil/default/block.block.country_switch_block.yml
+++ b/config/sata_brazil/default/block.block.country_switch_block.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_class
     - sata_core
   theme:
-    - sata_brazil
+    - sata
 third_party_settings:
   block_class:
     classes: block--country-switch
