--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_edge_und_6_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_edge_und_6_0_0.yml
@@ -2,6 +2,8 @@ uuid: 5fba71d2-d12b-4a21-869e-402c9482fca0
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: yW20VJKElb-oT85z7mW5B-hMiAUsl4B-UDLZzCZPats
 id: text_edge_und_6_0_0
 label: 'Edge NGram Text Field'
 minimum_solr_version: 6.0.0
