--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_edge_und_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_edge_und_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 49780a59-ef23-4f98-8fd4-b67db3598186
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: edn4g9huIbBonsmj_ZVT_ASjxhb-m9P7qL4zSNgQ_t8
 id: text_edge_und_7_0_0
 label: 'Edge NGram Text Field'
 minimum_solr_version: 7.0.0
