--- a/config/sata_colombia/default/core.extension.yml
+++ b/config/sata_colombia/default/core.extension.yml
@@ -98,6 +98,7 @@ module:
   migrate_plus: 0
   migrate_tools: 0
   module_filter: 0
+  mysql: 0
   node: 0
   node_view_permissions: 0
   options: 0
