--- a/config/sata_colombia/default/search_api_solr.solr_cache.cache_document_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_cache.cache_document_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 23abe568-396e-422f-a68d-ff2b8937a579
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: ClPoYNWUET68N1rNueZg_5KeyC2sNona4FTbDF-j1ZE
 id: cache_document_default_7_0_0
 label: 'Document Cache'
 minimum_solr_version: 7.0.0
