--- a/config/sata_colombia/default/search_api_solr.solr_cache.cache_fieldvalue_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_cache.cache_fieldvalue_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 6b54db03-0d63-4471-bf43-7472666b924a
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 3rL3u7QmgEuqpnwDP4cb2-7nIv7xwf7V_WXZyrcHoGc
 id: cache_fieldvalue_default_7_0_0
 label: 'Field Value Cache'
 minimum_solr_version: 7.0.0
