--- a/config/sata_colombia/default/search_api_solr.solr_cache.cache_filter_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_cache.cache_filter_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 75bf8b20-1cd6-43c3-a81e-09126ffec4d7
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: vq3VkGaE2DLoxkODTNhlaM8f4mgCN22b_XvadwGJXG8
 id: cache_filter_default_7_0_0
 label: 'Filter Cache'
 minimum_solr_version: 7.0.0
