--- a/config/sata_colombia/default/search_api_solr.solr_cache.cache_persegfilter_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_cache.cache_persegfilter_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 07fbe903-af4e-4963-8df6-c4e3056ddd0f
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: i1jxS-2SHFS6WaOhchNRw2Egt5YVnhLpVfq5h8dzPYE
 id: cache_persegfilter_default_7_0_0
 label: 'Per Segment Filter Cache'
 minimum_solr_version: 7.0.0
