--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_edgestring_und_6_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_edgestring_und_6_0_0.yml
@@ -2,6 +2,8 @@ uuid: b4baea81-287a-4afa-9d2c-9ca429bb05e4
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: iifw_DxebhUOezFaJM3sD9m2rvzGXWkwxPC_g_58nag
 id: text_edgestring_und_6_0_0
 label: 'Edge NGram String Field'
 minimum_solr_version: 6.0.0
