--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngram_und_6_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngram_und_6_0_0.yml
@@ -2,6 +2,8 @@ uuid: 02d82555-7258-4f86-85b6-52a19f9bb954
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: R-qv3m6WSi8tTmAcAyQK2adAXRPW4xLrmkIFbqIVmvc
 id: text_ngram_und_6_0_0
 label: 'NGram Text Field'
 minimum_solr_version: 6.0.0
