--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngram_und_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngram_und_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 5130b464-46cb-4afb-a6ac-f9ee9bd113e2
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 6uqsWgLopdBAXIzy2SwBKR3p6a2GgNIsdteOAG9K-08
 id: text_ngram_und_7_0_0
 label: 'NGram Text Field'
 minimum_solr_version: 7.0.0
