--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngramstring_und_6_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_ngramstring_und_6_0_0.yml
@@ -2,6 +2,8 @@ uuid: 9823aedf-4e1a-4578-b2f2-0125b529ca4e
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: uSBOTyeTCtQQUTiAzoF9BQbK5H6RnvAFSII-DlIUcmQ
 id: text_ngramstring_und_6_0_0
 label: 'NGram String Field'
 minimum_solr_version: 6.0.0
