--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_phonetic_und_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_phonetic_und_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: a8b6c834-0107-45fb-bc7e-a29835e69644
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: WpLFwsk7duNa2sQ1G_KO16bKL06d1JVveVjbkG9u5DI
 id: text_phonetic_und_7_0_0
 label: 'Fulltext Phonetic'
 minimum_solr_version: 7.0.0
