--- a/config/sata_colombia/default/search_api_solr.solr_field_type.text_und_6_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_field_type.text_und_6_0_0.yml
@@ -2,6 +2,8 @@ uuid: 6dc55443-a30e-4df1-b957-eeae3f9769ea
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: dpN5nQ9TYAnj96GAoBDjFmac2S7IovDn_VG-py4iflk
 id: text_und_6_0_0
 label: 'Language Undefined Text Field'
 minimum_solr_version: 6.0.0
@@ -55,9 +57,9 @@ field_type:
       filters:
         -
           class: solr.SynonymFilterFactory
-          ignoreCase: true
           synonyms: synonyms_und.txt
           expand: true
+          ignoreCase: true
         -
           class: solr.StopFilterFactory
           ignoreCase: true
@@ -184,8 +186,12 @@ solr_configs:
               name: buildOnStartup
               VALUE: 'false'
 text_files:
-  stopwords: ''
-  protwords: ''
+  stopwords: |
+
+  synonyms: |
+    drupal, durpal
+  protwords: |
+
   accents: |
     # À => A
     "\u00C0" => "A"
@@ -335,5 +341,3 @@ text_files:
     "\uFB05" => "st"
     # ﬆ => st
     "\uFB06" => "st"
-  synonyms: |
-    drupal, durpal
