--- a/config/sata_colombia/default/search_api_solr.solr_request_dispatcher.request_dispatcher_httpcaching_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_dispatcher.request_dispatcher_httpcaching_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: eebee9d1-1657-4658-a9d0-07c3f24440f0
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: bxAjXM_xls--jwh5HZqTat__y2_4nQJCFFLD69Wvr8A
 id: request_dispatcher_httpcaching_default_7_0_0
 label: 'HTTP Cache'
 minimum_solr_version: 7.0.0
