--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_autocomplete_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_autocomplete_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: ef231fc0-6e44-44e7-ac9b-bfe8416203d6
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: pYuahO9bLm6CkxAFR4fieJZxTfosiKyxUCMLG2rApeE
 id: request_handler_autocomplete_default_7_0_0
 label: Autocomplete
 minimum_solr_version: 7.0.0
