--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_elevate_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_elevate_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 65d90459-2e8c-4692-8160-31d7293ea815
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: awRUNLvDsGIt-mG3F50XkazfyvWMPDLB-_cGe8c17pU
 id: request_handler_elevate_default_7_0_0
 label: Elevator
 minimum_solr_version: 7.0.0
