--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_extract_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_extract_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: f715a1e4-9ebb-480e-b6d3-b7ac3992a06c
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 7vbCK-cOkMCZBmHr8iFW8A4oQx-k0svYhp52KHP9yEU
 id: request_handler_extract_default_7_0_0
 label: Extract
 minimum_solr_version: 7.0.0
