--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_mlt_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_mlt_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 5c1f9eb8-0557-43e2-9610-596d5a2fdd78
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: pUEvXftg5xCCVTHW_0W0A29nMsH8SkAFhwvONT-nB6g
 id: request_handler_mlt_default_7_0_0
 label: 'More Like This'
 minimum_solr_version: 7.0.0
