--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_query_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_query_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 9985013b-0621-4d85-a794-b410781997c4
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: mTtPKc0bQKmhHJjV1mFQ7yD806_uXWyXV8mmYirVY-c
 id: request_handler_query_default_7_0_0
 label: Query
 minimum_solr_version: 7.0.0
