--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_replicationmaster_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_replicationmaster_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 6ac7de06-7065-4286-ad3b-b8096b867403
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: VzQZqpoqX7DQfyyACH6rTXbtkI6UnKPUquWqNhtKsCY
 id: request_handler_replicationmaster_default_7_0_0
 label: 'Replication Master'
 minimum_solr_version: 7.0.0
