--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_replicationslave_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_replicationslave_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: bca39a20-09df-4573-8eff-bb7465c2035c
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: oLasTi84mXSOPlrp23tFSpNlHyzB-AaxcR60G0idwDY
 id: request_handler_replicationslave_default_7_0_0
 label: 'Replication Slave'
 minimum_solr_version: 7.0.0
