--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_select_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_select_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 37980904-f3dd-4c4f-9be1-50c034509c30
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: nx4cjhmOHhXQ6d5gnlM63v-zfbQmdeYi8pPV_4fiXf8
 id: request_handler_select_default_7_0_0
 label: Select
 minimum_solr_version: 7.0.0
