--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_spell_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_spell_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: c3ce9969-738b-492b-ac08-f3b7af9c5fd0
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: K8FL_GAJEdbxEnnmGUmM69c7O38bwz66axaebjmsb4U
 id: request_handler_spell_default_7_0_0
 label: Spellcheck
 minimum_solr_version: 7.0.0
