--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_suggest_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_suggest_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 617080eb-bcd9-4bd4-9194-bea068578f5a
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: ezZLQaU3x_dePTU7-Z_qfADhPOEXZ_nVYfp9wvYLIzI
 id: request_handler_suggest_default_7_0_0
 label: Suggester
 minimum_solr_version: 7.0.0
@@ -22,7 +24,7 @@ request_handler:
           name: suggest.dictionary
           VALUE: und
         -
-          name: suggest.dictionary
+          name: suggest.count
           VALUE: '10'
   arr:
     -
