--- a/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_tvrh_default_7_0_0.yml
+++ b/config/sata_colombia/default/search_api_solr.solr_request_handler.request_handler_tvrh_default_7_0_0.yml
@@ -2,6 +2,8 @@ uuid: 7ff0b703-2f60-47a8-9014-05ae4715fea2
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: dMZTGHu6VZtj5ks5N-ndQwAAr6PwcCIbFhsR1vnYhyQ
 id: request_handler_tvrh_default_7_0_0
 label: 'Term Vector'
 minimum_solr_version: 7.0.0
