Updating the SATA EMEA config.

--- a/config/sata_emea/default/core.extension.yml
+++ b/config/sata_emea/default/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  acquia_purge: 0
   acquia_search: 0
   address: 0
   admin_toolbar: 0
@@ -40,6 +41,8 @@ module:
   current_page_crumb: 0
   datetime: 0
   datetime_range: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   editor_file: 0
@@ -122,7 +125,9 @@ module:
   responsive_image: 0
   rest: 0
   robotstxt: 0
+  sata_core: 0
   sata_emea_migrations: 0
+  schema_metatag: 0
   schema_product: 0
   search: 0
   search_api: 0
@@ -149,6 +154,7 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_data_export: 0
+  views_ui: 0
   viewsreference: 0
   webform: 0
   webform_attachment: 0
