Exported the dev config for SATA US.

--- a/config/sata_us/remote_dev/stage_file_proxy.settings.yml
+++ b/config/sata_us/remote_dev/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
-origin: 'https://stg-www.satatools.us'
-origin_dir: ''
+origin: 'https://username:password@stg-www.satatools.us'
+origin_dir: sites/sata_us/files
 use_imagecache_root: true
-verify: true
+verify: false
