--- a/config/sata_us/default/google_tag.container.primary.yml
+++ b/config/sata_us/default/google_tag.container.primary.yml
@@ -1,8 +1,10 @@
+uuid: 263c333d-b724-4471-b5d7-9133da6a986d
 langcode: en
 status: true
 dependencies:
   module:
-    - ctools
+    - node
+    - taxonomy
     - webform
 id: primary
 label: Primary
