--- a/config/sata_us/default/search_api.server.acquia_search_server.yml
+++ b/config/sata_us/default/search_api.server.acquia_search_server.yml
@@ -15,6 +15,7 @@ dependencies:
     - search_api_solr.solr_field_type.text_ngramstring_und_6_0_0
     - search_api_solr.solr_field_type.text_phonetic_en_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_und_7_0_0
+    - search_api_solr.solr_field_type.text_string_und_6_0_0
     - search_api_solr.solr_field_type.text_und_7_0_0
     - search_api_solr.solr_request_dispatcher.request_dispatcher_httpcachingnever_default_7_0_0
     - search_api_solr.solr_request_handler.request_handler_autocomplete_default_7_0_0
@@ -58,3 +59,4 @@ backend_config:
   rows: 10
   index_single_documents_fallback_count: 10
   index_empty_text_fields: false
+  suppress_missing_languages: false
