--- a/composer.json
+++ b/composer.json
@@ -308,6 +308,9 @@
             "drupal/svg_image": {
                 "https://www.drupal.org/node/3023212": "https://www.drupal.org/files/issues/2018-12-31/missing_schema_field_formatter.patch"
             },
+            "drupal/theme_filter": {
+                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch"
+            },
             "drupal/viewsreference": {
                 "https://www.drupal.org/node/3192468": "https://www.drupal.org/files/issues/2021-01-12/3192468-2.patch"
             },
