--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -12,7 +12,7 @@ DOCKSAL_STACK="default"
 # This will prevent images from being updated when Docksal is updated
 WEB_IMAGE='docksal/apache:2.4-2.3'
 DB_IMAGE='docksal/mysql:5.7-1.5'
-CLI_IMAGE='docksal/cli:2.12-php7.4'
+CLI_IMAGE='docksal/cli:php8.1-3.1'
 
 # Override virtual host (matches project folder name by default)
 #VIRTUAL_HOST=PROJECTNAME.docksal
