feature/PimAutomation: Applied a patch for a bug I found.

--- a/composer.json
+++ b/composer.json
@@ -319,6 +319,9 @@
             },
             "drupal/views_selective_filters": {
                 "https://www.drupal.org/project/views_selective_filters/issues/3170132": "https://www.drupal.org/files/issues/2021-06-16/d9-compatibility-fixes-3170132-6.patch"
+            },
+            "vmlyr-drupal/kit-drush-commands": {
+                "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/issues/15": "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/files/9203528/sync_fix.diff.txt"
             }
         },
         "patchLevel": {
