Updated composer json and lock: added purge patch and removed media video micromodal patch and updated the package

--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,7 @@
         "drupal/linkit": "^5.0@beta",
         "drupal/login_emailusername": "^1.1",
         "drupal/media_responsive_thumbnail": "^1.0",
-        "drupal/media_video_micromodal": "^1.0.5",
+        "drupal/media_video_micromodal": "^1.0.8",
         "drupal/memcache": "^2.0@alpha",
         "drupal/menu_link_attributes": "^1.0",
         "drupal/menu_trail_by_path": "^1.0",
@@ -293,11 +293,11 @@
             "drupal/linkit": {
                 "https://www.drupal.org/node/2712951": "https://www.drupal.org/files/issues/2020-11-02/linkit-for-link-field-2712951-194.patch"
             },
-            "drupal/media_video_micromodal": {
-                "https://www.drupal.org/project/media_video_micromodal/issues/3254845": "https://www.drupal.org/files/issues/2021-12-16/fid-matches-media-id-error-2.patch"
-            },
             "drupal/migrate_plus": {
                 "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2020-10-06/fix_xpath_error-2787157-17.patch"
+            },
+            "drupal/purge": {
+                "https://www.drupal.org/project/purge/issues/3259320": "https://www.drupal.org/files/issues/2022-02-24/3259320-10.patch"
             },
             "drupal/simple_gmap": {
                 "https://www.drupal.org/node/2863979": "https://www.drupal.org/files/issues/2018-11-21/simple_gmap-address-formatter-2863979-36.patch"
