Brazil config updates: country switch disabled, Updated footer form block title, Updated hero responsive image styles, turned off local css and js minify,

--- a/config/sata_brazil/default/block.block.webform.yml
+++ b/config/sata_brazil/default/block.block.webform.yml
@@ -16,7 +16,7 @@ provider: null
 plugin: webform_block
 settings:
   id: webform_block
-  label: 'Email Sign-Up'
+  label: 'Sign Up For Tool News'
   label_display: visible
   provider: webform
   webform_id: email_sign_up
