--- a/config/sata_brazil/default/responsive_image.styles.hero.yml
+++ b/config/sata_brazil/default/responsive_image.styles.hero.yml
@@ -4,10 +4,9 @@ status: true
 dependencies:
   config:
     - image.style.biggest_landscape_3x1
-    - image.style.huge_landscape_2x1
-    - image.style.large_1x1
-    - image.style.medium_1x1
-    - image.style.small_portrait_2x3
+    - image.style.large_landscape_4x3
+    - image.style.medium_landscape_4x3
+    - image.style.small_landscape_4x3
   theme:
     - sata
 id: hero
@@ -20,27 +19,27 @@ image_style_mappings:
     multiplier: 1x
   -
     image_mapping_type: image_style
-    image_mapping: huge_landscape_2x1
+    image_mapping: biggest_landscape_3x1
     breakpoint_id: sata.xlarge
     multiplier: 1x
   -
     image_mapping_type: image_style
-    image_mapping: large_1x1
+    image_mapping: large_landscape_4x3
     breakpoint_id: sata.large
     multiplier: 1x
   -
     image_mapping_type: image_style
-    image_mapping: medium_1x1
+    image_mapping: medium_landscape_4x3
     breakpoint_id: sata.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
-    image_mapping: small_portrait_2x3
+    image_mapping: medium_landscape_4x3
     breakpoint_id: sata.small
     multiplier: 1x
   -
     image_mapping_type: image_style
-    image_mapping: small_portrait_2x3
+    image_mapping: small_landscape_4x3
     breakpoint_id: sata.xsmall
     multiplier: 1x
 breakpoint_group: sata
