UpdatingConfigs: Updated the CT NA prod config.

--- a/config/crescenttool/default/core.entity_view_display.paragraph.section.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.section.preview.yml
@@ -83,6 +83,8 @@ content:
     settings:
       image_link: ''
       image_style: thumbnail_cropped
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 8
     region: content
