--- a/config/crescenttool/default/user.role.content_editor.yml
+++ b/config/crescenttool/default/user.role.content_editor.yml
@@ -10,6 +10,7 @@ dependencies:
     - media.type.file
     - media.type.image
     - media.type.remote_video
+    - media.type.video
     - node.type.page
     - taxonomy.vocabulary.tags
   module:
@@ -21,6 +22,7 @@ dependencies:
     - node
     - paragraphs
     - path
+    - quick_node_clone
     - system
     - taxonomy
     - toolbar
@@ -40,6 +42,9 @@ permissions:
   - 'access toolbar'
   - 'access user profiles'
   - 'administer nodes'
+  - 'clone landing_page content'
+  - 'clone media_page content'
+  - 'clone page content'
   - 'create audio media'
   - 'create file media'
   - 'create image media'
@@ -48,6 +53,7 @@ permissions:
   - 'create remote_video media'
   - 'create terms in tags'
   - 'create url aliases'
+  - 'create video media'
   - 'delete all revisions'
   - 'delete any page content'
   - 'delete own page content'
@@ -58,11 +64,13 @@ permissions:
   - 'edit any image media'
   - 'edit any page content'
   - 'edit any remote_video media'
+  - 'edit any video media'
   - 'edit own audio media'
   - 'edit own file media'
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own remote_video media'
+  - 'edit own video media'
   - 'edit terms in tags'
   - 'revert all revisions'
   - 'revert page revisions'
