--- a/config/crescenttool/default/views.view.acquia_search.yml
+++ b/config/crescenttool/default/views.view.acquia_search.yml
@@ -464,7 +464,7 @@ display:
               media_page: search_index
               page: search_index
       query:
-        type: views_query
+        type: search_api_query
         options:
           bypass_access: false
           skip_access: false
