--- a/config/sata_colombia/default/language.content_settings.node.social_post.yml
+++ b/config/sata_colombia/default/language.content_settings.node.social_post.yml
@@ -1,16 +1,16 @@
-uuid: 276cee4c-9106-45c7-b2ec-562986e81da3
+uuid: 218b9c9e-d87c-4010-ad9f-6307af144405
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.product_category
+    - node.type.social_post
   module:
     - content_translation
 third_party_settings:
   content_translation:
     enabled: true
-id: node.product_category
+id: node.social_post
 target_entity_type_id: node
-target_bundle: product_category
+target_bundle: social_post
 default_langcode: site_default
 language_alterable: true
