--- a/config/sata_colombia/default/node.type.page.yml
+++ b/config/sata_colombia/default/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: 12f137d4-d839-4f5d-b37a-16e383ca8f28
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 name: 'Basic page'
 type: page
 description: 'Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
