--- a/config/sata_brazil/default/language.content_settings.node.media_page.yml
+++ b/config/sata_brazil/default/language.content_settings.node.media_page.yml
@@ -4,8 +4,13 @@ status: true
 dependencies:
   config:
     - node.type.media_page
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
 id: node.media_page
 target_entity_type_id: node
 target_bundle: media_page
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
