--- a/config/sata_brazil/default/language.content_settings.node.product_category.yml
+++ b/config/sata_brazil/default/language.content_settings.node.product_category.yml
@@ -4,8 +4,13 @@ status: true
 dependencies:
   config:
     - node.type.product_category
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
 id: node.product_category
 target_entity_type_id: node
 target_bundle: product_category
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
