--- a/config/sata_brazil/default/node.type.page.yml
+++ b/config/sata_brazil/default/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: 973251f2-5fb4-4307-b654-815d935adba3
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 name: 'Basic page'
 type: page
 description: 'Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
