--- a/config/sata_colombia/default/language.content_settings.node.styleguide.yml
+++ b/config/sata_colombia/default/language.content_settings.node.styleguide.yml
@@ -4,8 +4,13 @@ status: true
 dependencies:
   config:
     - node.type.styleguide
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
 id: node.styleguide
 target_entity_type_id: node
 target_bundle: styleguide
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
