--- a/config/sata_colombia/remote_dev/acquia_connector.settings.yml
+++ b/config/sata_colombia/remote_dev/acquia_connector.settings.yml
@@ -35,6 +35,7 @@ spi:
     time: 0
   cron_interval: 28800
   site_environment: dev
+  env_detection_enabled: true
 mapping:
   acquia_spi_send_node_user:
     - acquia_connector.settings
